--- a/package.json
+++ b/package.json
@@ -1,21 +1,57 @@
 {
-  "name": "wtime",
+  "name": "expo-app",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "bunx rork start -p e2xyowppv3aj8g8uhrdfb --tunnel",
+    "start-web": "bunx rork start -p e2xyowppv3aj8g8uhrdfb --web --tunnel",
+    "start-web-dev": "DEBUG=expo* bunx rork start -p e2xyowppv3aj8g8uhrdfb --web --tunnel",
+    "lint": "expo lint"
   },
   "dependencies": {
-    "expo": "~54.0.23",
+    "@expo/vector-icons": "^15.0.3",
+    "@nkzw/create-context-hook": "^1.1.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@rork-ai/toolkit-sdk": "^0.2.16",
+    "@stardazed/streams-text-encoding": "^1.0.2",
+    "@tanstack/react-query": "^5.83.0",
+    "@ungap/structured-clone": "^1.3.0",
+    "expo": "^54.0.20",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.10",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-router": "~6.0.13",
+    "expo-sms": "~14.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.8",
+    "lucide-react-native": "^0.475.0",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@babel/core": "^7.25.2",
+    "@expo/ngrok": "^4.1.0",
+    "@types/react": "~19.1.10",
+    "eslint": "^9.31.0",
+    "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
