--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "WTime Security App",
-    "slug": "wtime-security-app",
+    "name": "WTime",
+    "slug": "wtime",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "rork-app",
+    "scheme": "clasalut",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "app.rork.wtime-security-app",
+      "bundleIdentifier": "clasalutservicios.com-wtime",
       "infoPlist": {
         "NSLocationAlwaysAndWhenInUseUsageDescription": "Allow $(PRODUCT_NAME) to use your location.",
         "NSLocationAlwaysUsageDescription": "Allow $(PRODUCT_NAME) to use your location.",
@@ -30,7 +30,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "app.rork.wtime_security_app",
+      "package": "clasalutservicios.com-wtime",
       "permissions": [
         "android.permission.VIBRATE",
         "ACCESS_COARSE_LOCATION",
@@ -47,7 +47,7 @@
       [
         "expo-router",
         {
-          "origin": "https://rork.com/"
+          "origin": "https://clasalutservicios.com/"
         }
       ],
       "expo-font",
